tests/ui/unexpected_colon.stderr
error: no rules expected the token `:`
  --> $DIR/unexpected_colon.rs:13:13
   |
13 |     json!({ : true });
   |             ^

